added and deleted files

--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -167,6 +167,7 @@ padding: 6px;
     <property name="title">
      <string>Help</string>
     </property>
+    <addaction name="actionHelp"/>
     <addaction name="actionAbout"/>
    </widget>
    <widget class="QMenu" name="menuSpecial_Connection">
@@ -519,9 +520,12 @@ padding: 6px;
     <string>Beam Splice Joint</string>
    </property>
   </action>
+  <action name="actionHelp">
+   <property name="text">
+    <string>Help</string>
+   </property>
+  </action>
  </widget>
- <resources>
-  <include location="../resources/resources.qrc"/>
- </resources>
+ <resources/>
  <connections/>
 </ui>
